--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ lapin = "2.3.4"
 serde = "1.0.201"
 spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
 spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
-spin-telemetry = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
+spin-expressions = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
 spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
 tokio = { version = "1.37.0", features = ["full"] }
+tokio-executor-trait = "2.1.1"
+tokio-reactor-trait = "1.1.0"
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 wasmtime = { version = "18.0.4", features = ["component-model"] }
