--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -2,12 +2,12 @@
 name = "spin-messaging-sdk"
 version.workspace = true
 edition.workspace = true
-include = ["../../wit/messaging.wit"]
+include = ["../../wit"]
 
 [lib]
 name = "spin_messaging_sdk"
 
 [dependencies]
 spin-executor = "3.0.1"
-# spin-messaging-macro = { path = "macro" }
+spin-messaging-macro = { path = "macro" }
 wit-bindgen = { workspace = true }
