--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
       matrix:
         config:
           - { target: "x86_64-unknown-linux-gnu", os: "ubuntu-20.04", arch: "amd64", extension: "" }
-          - { target: "aarch64-unknown-linux-gnu", os: "ubuntu-20.04", arch: "aarch64", extension: "" }
+          - { target: "aarch64-unknown-linux-gnu", os: "ubuntu-20.04", arch: "aarch64", extension: "", extraArg: "--features openssl/vendored" }
           - { target: "x86_64-apple-darwin", os: "macos-latest", arch: "amd64", extension: "" }
           - { target: "aarch64-apple-darwin", os: "macos-latest", arch: "aarch64", extension: "" }
           - { target: "x86_64-pc-windows-msvc", os: "windows-latest", arch: "amd64", extension: ".exe" }
@@ -60,18 +60,22 @@ jobs:
         with:
           shared-key: "${{ runner.os }}-lint-${{ hashFiles('./Cargo.lock') }}"
           cache-on-failure: "true"
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: 1.76
           targets: ${{ matrix.config.target }}
+
       - name: Install Spin
         uses: rajatjindal/setup-actions/spin@main
         with:
           version: "v2.4.2"
+
       - name: Install pluginify
         shell: bash
         run: spin plugins install --url https://github.com/itowlson/spin-pluginify/releases/download/canary/pluginify.json --yes
+
       - name: Set up for cross-compiled linux aarch64 build
         if: matrix.config.target == 'aarch64-unknown-linux-gnu'
         run: |
@@ -79,14 +83,17 @@ jobs:
           sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
           echo '[target.aarch64-unknown-linux-gnu]' >> ${HOME}/.cargo/config.toml
           echo 'linker = "aarch64-linux-gnu-gcc"' >> ${HOME}/.cargo/config.toml
+
       - name: Build plugin binary
-        run: cargo build --release --target ${{ matrix.config.target }}
+        run: cargo build --release --target ${{ matrix.config.target }} ${{ matrix.config.extraArg }}
+
       - name: Copy plugin binary to standard location
         shell: bash
         run: cp target/${{ matrix.config.target }}/release/${{ env.PROGRAM_NAME}}${{ matrix.config.extension }} target/release/${{ env.PROGRAM_NAME}}${{ matrix.config.extension }}
 
       - name: Pluginify plugin binary
         run: spin pluginify --arch ${{ matrix.config.arch }}
+
       - name: Archive pluginified
         uses: actions/upload-artifact@v4
         with:
