--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.74"
 anyhow = "1.0.83"
 clap = { version = "3.1.15", features = ["derive", "env"] }
 futures = "0.3.30"
-lapin = { version = "2.3.4", default-features = false, features = ["native-tls"] }
+lapin = { version = "2.3.4", default-features = false, features = ["vendored-openssl"] }
 serde = "1.0.201"
 spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
 spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.5.0" }
@@ -32,3 +32,8 @@ edition = "2021"
 
 [workspace.dependencies]
 wit-bindgen = "0.16.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+# This needs to be an explicit dependency to enable
+# '--features openssl/vendored', which is used for Linux releases.
+openssl = { version = "0.10" }
